data/issues_nolabel/nolabel_test_11524.txt
Build fails on FreeBSD 11

external/grpc/src/core/lib/iomgr/socket_utils_common_posix.c:101:39: error: use of undeclared identifier 'IP_PKTINFO'
  if (0 != setsockopt(fd, IPPROTO_IP, IP_PKTINFO, &get_local_ip,
                                      ^